// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/basic.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg"
>
  <div
    class="sub-title"
  >
    Small size
  </div>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
  <div
    class="ej-steps ej-steps-vertical ej-steps-small"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-check-circle-o ej-icon-xs"
          >
            <use
              href="#check-circle-o"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Finished
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          In Progress
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ellipsis-item ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-ellipsis ej-icon-xs"
          >
            <use
              href="#ellipsis"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Waiting
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Small size, single line text
  </div>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
  <div
    class="ej-steps ej-steps-vertical ej-steps-small"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-check-circle-o ej-icon-xs"
          >
            <use
              href="#check-circle-o"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Finished
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          In Progress
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ellipsis-item ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-ellipsis ej-icon-xs"
          >
            <use
              href="#ellipsis"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Waiting
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Default size
  </div>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <div
    class="ej-steps ej-steps-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-process error-tail"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          1
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Finished
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-error ellipsis-item ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-cross-circle-o ej-icon-md"
          >
            <use
              href="#cross-circle-o"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Error
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ellipsis-item ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-ellipsis ej-icon-md"
          >
            <use
              href="#ellipsis"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Waiting
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Customized status 
  </div>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <div
    class="ej-steps ej-steps-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 1
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process error-tail ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 2
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-error ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 3
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Customized icon 
  </div>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <div
    class="ej-steps ej-steps-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 1
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 2
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 3
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Multiple steps 
  </div>
  <div
    class="ej-whitespace ej-whitespace-lg"
  />
  <div
    class="ej-steps ej-steps-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 1
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process error-tail ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 2
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-error ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 3
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/steps/demo/horizontal.md correctly 1`] = `
<div
  class="ej-wingblank ej-wingblank-lg stepsExample"
>
  <div
    class="sub-title"
  >
    Horizontal small size
  </div>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
  <div
    class="ej-steps ej-steps-horizontal ej-steps-small ej-steps-label-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-check-circle-o ej-icon-xs"
          >
            <use
              href="#check-circle-o"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Finished
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          In Progress
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ellipsis-item ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-ellipsis ej-icon-xs"
          >
            <use
              href="#ellipsis"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Waiting
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Horizontal default size
  </div>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
  <div
    class="ej-steps ej-steps-horizontal ej-steps-label-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-finish ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-check-circle-o ej-icon-md"
          >
            <use
              href="#check-circle-o"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Finished
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-process"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          2
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          In Progress
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ellipsis-item ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-ellipsis ej-icon-md"
          >
            <use
              href="#ellipsis"
            />
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Waiting
        </div>
        <div
          class="ej-steps-item-description"
        >
          This is description
        </div>
      </div>
    </div>
  </div>
  <div
    class="sub-title"
  >
    Horizontal customized icon
  </div>
  <div
    class="ej-whitespace ej-whitespace-md"
  />
  <div
    class="ej-steps ej-steps-horizontal ej-steps-label-vertical"
  >
    <div
      class="ej-steps-item ej-steps-item-process error-tail ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 1
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-error ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 2
        </div>
      </div>
    </div>
    <div
      class="ej-steps-item ej-steps-item-wait ej-steps-item-custom"
    >
      <div
        class="ej-steps-item-tail"
      />
      <div
        class="ej-steps-item-icon"
      >
        <span
          class="ej-steps-icon"
        >
          <svg
            class="ej-icon ej-icon-md"
            viewBox="0 0 42 42"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill-rule="evenodd"
              stroke="transparent"
              stroke-width="4"
            >
              <path
                d="M21 0C9.402 0 0 9.402 0 21c0 11.6 9.402 21 21 21s21-9.4 21-21C42 9.402 32.598 0 21 0z"
              />
              <path
                d="M29 18.73c0-.55-.447-1-1-1H23.36l4.428-5.05c.407-.46.407-1.208 0-1.668-.407-.46-1.068-.46-1.476 0l-5.21 5.89-5.21-5.89c-.406-.46-1.067-.46-1.475 0-.406.46-.406 1.207 0 1.667l4.43 5.05H14.23c-.55 0-.998.45-.998 1 0 .554.448.97 1 .97h5.9v3.942h-5.9c-.552 0-1 .448-1 1s.448.985 1 .985h5.9v4.896c0 .552.448 1 1 1 .55 0 .968-.284.968-.836v-5.06H28c.553 0 1-.433 1-.985s-.447-1-1-1h-5.9v-3.94H28c.553 0 1-.418 1-.97z"
                fill="#FFF"
              />
            </g>
          </svg>
        </span>
      </div>
      <div
        class="ej-steps-item-content"
      >
        <div
          class="ej-steps-item-title"
        >
          Step 3
        </div>
      </div>
    </div>
  </div>
</div>
`;
